@@ -4,12 +4,12 @@
 package com.datasqrl.packager;
 
 import com.datasqrl.packager.util.FileHash;
+import java.nio.file.Path;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.io.InputStream;
-import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -27,7 +27,7 @@ public class FileHashTest {
     @Disabled
     @SneakyThrows
     public void generateHash() {
-        System.out.println(FileHash.getFor(Paths.get("/Users/matthias/git/sqrl-repository/testdata/8_e-WN-FzfckOREZ85JY6pv6ktQ.zip")));
+        System.out.println(FileHash.getFor(Path.of("/Users/matthias/git/sqrl-repository/testdata/8_e-WN-FzfckOREZ85JY6pv6ktQ.zip")));
     }
 
 }
